033/solution/expense-terraform-dev/02-sg/sg_rules.tf
### Security Group Rules ###

# DB is accepting connections from Backend
resource "aws_security_group_rule" "db_backend" {
  type                     = "ingress"
  from_port                = 3306
  to_port                  = 3306
  protocol                 = "tcp"
  security_group_id        = module.db.sg_id
  source_security_group_id = module.backend.sg_id
}

# DB is accepting connections from Bastion
resource "aws_security_group_rule" "db_bastion" {
  type                     = "ingress"
  from_port                = 3306
  to_port                  = 3306
  protocol                 = "tcp"
  security_group_id        = module.db.sg_id
  source_security_group_id = module.bastion.sg_id
}

# DB is accepting connections from Ansible
resource "aws_security_group_rule" "db_ansible" {
  type                     = "ingress"
  from_port                = 3306
  to_port                  = 3306
  protocol                 = "tcp"
  security_group_id        = module.db.sg_id
  source_security_group_id = module.ansible.sg_id
}

# Backend is accepting connections from Frontend
resource "aws_security_group_rule" "backend_frontend" {
  type                     = "ingress"
  from_port                = 8080
  to_port                  = 8080
  protocol                 = "tcp"
  security_group_id        = module.backend.sg_id
  source_security_group_id = module.frontend.sg_id
}

# Backend is accepting connections from Bastion
resource "aws_security_group_rule" "backend_bastion" {
  type                     = "ingress"
  from_port                = 22
  to_port                  = 22
  protocol                 = "tcp"
  security_group_id        = module.backend.sg_id
  source_security_group_id = module.bastion.sg_id
}

# Backend is accepting connections from Ansible
resource "aws_security_group_rule" "backend_ansible" {
  type                     = "ingress"
  from_port                = 22
  to_port                  = 22
  protocol                 = "tcp"
  security_group_id        = module.backend.sg_id
  source_security_group_id = module.ansible.sg_id
}

# Frontend is accepting connections from Public
resource "aws_security_group_rule" "frontend_public" {
  type              = "ingress"
  from_port         = 80
  to_port           = 80
  protocol          = "tcp"
  security_group_id = module.frontend.sg_id
  cidr_blocks       = ["0.0.0.0/0"]
}

# Frontend is accepting connections from Bastion
resource "aws_security_group_rule" "frontend_bastion" {
  type                     = "ingress"
  from_port                = 22
  to_port                  = 22
  protocol                 = "tcp"
  security_group_id        = module.frontend.sg_id
  source_security_group_id = module.bastion.sg_id
}

# Frontend is accepting connections from Ansible
resource "aws_security_group_rule" "frontend_ansible" {
  type                     = "ingress"
  from_port                = 22
  to_port                  = 22
  protocol                 = "tcp"
  security_group_id        = module.frontend.sg_id
  source_security_group_id = module.ansible.sg_id
}

# Bastion is accepting connections from Public
resource "aws_security_group_rule" "bastion_public" {
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  security_group_id = module.bastion.sg_id
  cidr_blocks       = ["0.0.0.0/0"]
}

# Ansible is accepting connections from Public
resource "aws_security_group_rule" "ansible_public" {
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  security_group_id = module.ansible.sg_id
  cidr_blocks       = ["0.0.0.0/0"]
}
